--- a/exercises/lab_02_mcp_advanced/data/deep_agent_sandbox/index.html
+++ b/exercises/lab_02_mcp_advanced/data/deep_agent_sandbox/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Snake Game</h1>
-    <div id="game-board"></div>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
     <div id="score">Score: 0</div>
     <script src="game.js"></script>
 </body>
